# smooth-weighted-round-robin

./: CMakeLists.txt  README.md  main.cpp
.github/worflows/: ci.yml
.github/workflows/: ci.yml
include/swrr/: swrr.hpp
includes/server/: server.hpp
includes/swrr/: swrr.hpp
output/: main
src/server/: server.cpp
src/swrr/: swrr.cpp
tests/: CMakeLists.txt  test_swrr.cpp
